# cnctd_solana_programs

./: Anchor.toml  CLAUDE.md  README.md
programs/cnctd_solana_programs/: Cargo.toml
programs/cnctd_solana_programs/src/: lib.rs
programs/cnctd_studio_program/: Cargo.toml  buffer-keypair.json
programs/cnctd_studio_program/src/: constants.rs  errors.rs  lib.rs  utils.rs
programs/cnctd_studio_program/src/arguments/: contract_request.rs  initialize_band_args.rs  initialize_token_mint_args.rs  initialize_user_args.rs  metadata.rs  mint_album_args.rs  mod.rs  purchase_release_args.rs
programs/cnctd_studio_program/src/arguments/release/: close_release_access_args.rs  complete_args.rs  fulfill_args.rs  mod.rs  purchase_access_args.rs
programs/cnctd_studio_program/src/instructions/: add_metaplex_metadata.rs  close_treasury.rs  close_user_account.rs  get_treasury.rs  init_treasury.rs  initialize.rs  initialize_artist.rs  initialize_band.rs  initialize_program_metadata.rs  initialize_token_mint.rs  initialize_treasury.rs  initialize_user.rs  mint_album.rs  mint_tokens.rs  mod.rs  purchase_release.rs  transfer_tokens.rs  update_admins.rs  update_program_metadata.rs
programs/cnctd_studio_program/src/requests/: contract_request.rs  mod.rs
programs/cnctd_studio_program/src/state/: album.rs  artist_pda.rs  band_pda.rs  mint_album.rs  mod.rs  program_metadata.rs  release_access.rs  release_escrow.rs  treasury.rs  user_pda.rs
tests/: Cargo.toml
tests/src/: lib.rs  test_initialize.rs  test_mint_album.rs  test_release.rs
(+26 files in other folders)
