[package]
name = "tests"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[dependencies]
anchor-client = "0.31.0"
cnctd_studio_program = { version = "0.1.0", path = "../programs/cnctd_studio_program" }
solana-sdk = "2.2.1"

[dev-dependencies]
solana-sdk = "2.2.1"
solana-program = "2.2.1"
